awards image test, profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
 
 # Site Author
 author:
-  name             : "Tania L. Maxwell"
+  name             : ""
   avatar           : "/img/pic_scotora_website.png"
   bio              : "PhD student at INRAE"
   location         : "Bordeaux, France & \ Quebec, Canada"
