--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Tania L. Maxwell"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Tania"
+name                     : "Tania L. Maxwell"
 description              : "Soil ecology - biogeochemistry - coding aficionado"
 url                      : "https://tania-maxwell.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
