--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links
 main:
-  - title: "Home"
-    url: / #set to root
+  - title: "About Me"
+    url: /about_me/
+  - title: "Research"
+    url: /research/
   - title: "Skills"
     url: /skills/
   - title: "Publications"
