field pic tabs, updated pics

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,4 +10,6 @@ main:
     url: /publications/
   - title: "Awards"
     url: /awards/
+  - title: "Field Pictures"
+    url: /docs/field_pictures/
   
