updated research diagram and email

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
   location         : "Bordeaux, France & Quebec, Canada"
   email            :
   links:
-    - label: "tania.maxwell [] inrae.fr"
+    - label: "tania.maxwell at inrae.fr"
       icon: "fas fa-fw fa-envelope"
       url: "\n"
     - label: "Website"
