added accepted paper, supervisors

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Tania L. Maxwell"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Tania L. Maxwell"
-description              : "Soil ecology - biogeochemistry - coding aficionado"
+description              : "Soil ecology - biogeochemistry - coding enthusiast"
 url                      : "https://tania-maxwell.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
